[package]
name = "wicker"
version = "0.2.0"
edition = "2021"

description = "Weighted probability picker for Rust"
license = "MIT"
keywords = ["probability", "pick", "random", "loot-table"]
categories = ["game-development", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
